// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Chapter > aim 1`] = `
{
  "memory": [
    {
      "content": [
        {
          "args": {
            "name": "some",
            "scene": "main",
          },
          "type": "aim",
        },
        {
          "args": {},
          "type": "move",
        },
      ],
      "type": "motion",
    },
    {
      "content": [
        {
          "args": {},
          "type": "move",
        },
      ],
      "type": "motion",
    },
  ],
}
`;

exports[`Chapter > content 1`] = `
[
  {
    "content": [
      "some",
      "text",
      "",
    ],
    "name": "aside",
    "type": "text",
  },
  {
    "content": [
      "some",
      "text",
      "",
    ],
    "name": "hero",
    "type": "text",
  },
  {
    "content": [
      "some",
      "text",
      "",
    ],
    "name": "aside",
    "type": "text",
  },
]
`;

exports[`Chapter > pause 1`] = `
[
  {
    "content": [
      "some",
      {
        "args": {
          "ms": 10,
        },
        "type": "pause",
      },
      "",
      "",
      {
        "args": {
          "ms": 10,
        },
        "type": "pause",
      },
      "",
      {
        "args": {
          "ms": 10,
        },
        "type": "pause",
      },
      "text",
      {
        "args": {
          "ms": 10,
        },
        "type": "pause",
      },
      "",
      "",
      {
        "args": {
          "ms": 10,
        },
        "type": "pause",
      },
      "",
    ],
    "name": "aside",
    "type": "text",
  },
  {
    "content": [
      "some",
      "text",
      "",
    ],
    "name": "hero",
    "type": "text",
  },
]
`;

exports[`Chapter > type 1`] = `
[
  {
    "content": [
      "some",
      {
        "a": 1,
      },
      "",
      "text",
      "",
    ],
    "name": "aside",
    "type": "text",
  },
  {
    "content": [
      "some",
      {
        "a": 1,
      },
      "",
      "text",
      "",
    ],
    "name": "hero",
    "type": "text",
  },
]
`;
